# MLgrabbag

./: DNN_playground_unified.cu  LogReg-sklearn.ipynb  README.md  SVM_theano.ipynb  conftest.py  simple_logreg.py  sklearn_ML.ipynb  supervised-theano.ipynb  theano_ML.ipynb  theano_RNN_LSTM.ipynb  tutorial_theano.ipynb
2017GlobalAI/: DNN.py  FBfakepreprocess.ipynb  FBfaketheano.ipynb  README.md  datasetspreprocess.ipynb
2017GlobalAI/data/: FB_X_test.npy  FB_X_test.pkl  FB_X_train.npy  FB_X_train.pkl  FB_X_valid.npy  FB_X_valid.pkl  FB_X_vec_test.pkl  FB_X_vec_valid.pkl  FB_Y_test.npy  FB_Y_test.pkl  FB_Y_train.npy  FB_Y_train.pkl  FB_Y_valid.npy  FB_Y_valid.pkl  FB_Y_vec_test.pkl  FB_Y_vec_train.pkl  FB_Y_vec_valid.pkl  breitbartclean.csv  facebook-fact-check2.csv  huffingtonclean.csv  rtclean.csv  voanewsclean.csv
CNN/: CNN_tf.ipynb  lenet_theano.ipynb
DataWrappers/: __init__.py  config.ini
DataWrappers/alphavantage/: StockTimeSeries.py
DataWrappers/unittests/: test_Configuration.py  test_StockTimeSeries.py
DataWrappers/utilities/: Configuration.py  handle_API_call.py
FedoraNVidiaInstallTips/: Fedora 24_23_22 nVidia Drivers Install Guide - If Not True Then False.html  Remove Fedora kernel _ Linux Windows Install Setup Configuration Project.html
ISOX/: requirements.txt
ISOX/Utilities/: configure_paths.py
LaTeXandpdfs/: DNN.tex  DeepSVM.tex  ML.tex  SVM_parallel_out.tex
ML/: CNN.py  CNN_tf.py  DNN.py  DNN_tf.py  GRUs_Right.py  LSTM.py  LSTM_Herta.py  LSTM_Right.py  NN.py  SVM.py  __init_.py  __init__.py  gradDes.py  linreg_gradDes.py
NaturalLanguageProcessing/: NLP_nltk.py  TextSummarization.ipynb  TextSummarization_edited.ipynb  TextSummarization_editted.ipynb  parse_pdf.py
Notebooks/NaturalLanguage/: NLTKNotes.ipynb
OpenXLA/: README.md
Scripts/PyTorchDocker/: RunDocker.sh  SetupPyTorchDocker.sh  docker-compose.yaml
Source/: CMakeLists.txt
coursera_Ng/: KNN.ipynb
coursera_Ng/machine-learning-ex1/ex1/: computeCost.m  computeCostMulti.m  featureNormalize.m  gradientDescent.m  gradientDescentMulti.m  normalEqn.m  plotData.m
coursera_Ng/machine-learning-ex2/ex2/: costFunction.m  costFunctionReg.m  ex2.m  plotData.m  predict.m  sigmoid.m
coursera_Ng/machine-learning-ex3/ex3/: lrCostFunction.m  oneVsAll.m
coursera_Ng/machine-learning-ex5/ex5/: learningCurve.m  linearRegCostFunction.m  polyFeatures.m  validationCurve.m
coursera_Ng/machine-learning-ex6/: SVM_ex6_sklearn.ipynb
deep-learning--ud730/Lessons/: 1 From Machine Learning to Deep Learning.ipynb  1_notmnist.ipynb
kaggle/: DatSciBow2017_FullPreprocessTutorial.ipynb  DatSciBow2017_SVM.ipynb  HOG_DNN.ipynb  HOG_DNN_32.ipynb  HOG_SVM32.ipynb  HOG_process.ipynb  HOG_process2.ipynb  HOG_process_32.ipynb  HOG_process_322.ipynb  dueSigmaFinancial_kaggle.py  dueSigmaFinancial_local.ipynb  dueSigmaFinancial_local_GRUs.ipynb  kaggle.ipynb
kaggle/InstacarMarketBasket/: InstacartMarketBasket.ipynb
nVidia_entrevue/: Halloween_candy_max.cpp  Halloween_candy_max.ipynb  Halloween_candy_max_omp.cpp  prefix_sum.cpp
notebooks/: SQLAlchemyTutorial.ipynb  VisualizationBokeh.ipynb
tensorflow-notebooks/: DatasetsIntro_v01_03.ipynb  LinearRegression.ipynb
visualization/bokehplus/: anscombe.py  apps.ipynb  config.ini  linking_behavior.py
visualization/bokehplus/app/simple_hdf5/: create_hdf5.py  drive.py  main.py
